Fix scrolling on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
 
   html {
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
@@ -43,5 +44,12 @@
     height: 1px;
     background: var(--color-divider);
     width: 100%;
+  }
+}
+
+@layer utilities {
+  .snap-section {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
   }
 }
